# final-ai

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env  .env.example  package.json  pyproject.toml
backend/agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/agents/: corridor_agent.py  fx_agent.py  fx_service.py  last_mile_agent.py  quote_graph.py  route_optimizer_agent.py  types.py
backend/app/core/: config.py
backend/app/core/security/: idempotency.py  supabase_jwt.py
backend/app/llm/: explain.py  llm_client.py
backend/app/middleware/: supabase_auth.py
backend/app/models/: transfer.py
backend/app/providers/: http_adapter.py  registry.py  types.py
backend/app/routers/: pricing.py  transfers.py
backend/app/supabase/: rest_client.py
backend/tests/: test_agent_pipeline.py  test_api_endpoints.py  test_fx_service.py  test_health.py  test_provider_registry.py
frontend/: .env.local  .env.local.example  package-lock.json  package.json  tsconfig.json
frontend/.next/: app-build-manifest.json
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/app/sender/: page.tsx
frontend/lib/schemas/: remittance.ts
frontend/lib/supabase/: browserClient.ts
frontend/src/: smoke.test.ts
frontend/src/api/: agent.ts
frontend/src/hooks/: useTransfers.ts
frontend/src/state/: transferStore.ts
infra/supabase/migrations/: 0001_schema_rls_realtime.sql
(+60 files in other folders)
